upgrade to JDK, JFX 25